[package]
name = "loopdev-detach"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loopdev = "0.4.0"
nix = { version = "0.28.0", features = ["fs"] }
errno = "0.3.8"
clap = { version = "4.5.4", features = ["derive"] }
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }

